--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Black_Jack_LOGIN</title>
+<title>BlackJack App</title>
+<script th:src="@{/js/blackjack.js}"></script>
+    <link rel="stylesheet" href="" th:href="@{/css/blackjack.css}"/>
 
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
-	
+
 </head>
 <body>
 
@@ -23,8 +25,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Registration and
-					Login Black Jack</a>
+				<a class="navbar-brand" href="#" th:href="@{/}">SWE681 Blackjack</a>
 			</div>
 		</div>
 	</nav>
