resource folder update new
resource folder update new

--- a/src/main/resources/static/css/blackjack.css
+++ b/src/main/resources/static/css/blackjack.css
@@ -3,10 +3,10 @@
     width: 720px;
     border: solid 1px #ddd;
     margin: 0 auto;
-   background: #3ac7fe;
-border: solid 10px;
-text-align:center;
-min-height:430px;
+   	background: greenyellow;
+	border: solid 10px;
+	text-align:center;
+	min-height:430px;
 }
 
 .btn{
