--- a/src/main/resources/templates/Game.html
+++ b/src/main/resources/templates/Game.html
@@ -10,6 +10,17 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
+	<style>
+  body {
+    background-color: #006633;
+    text-align: center;
+    
+  }
+  #UserName{
+	  color: #ffffff;
+  }
+</style>
+
 
 </head>
 <body>
@@ -39,6 +50,11 @@
 	<br>
 	<br>
 	<br>
+	<p id="UserName">Player id : <span sec:authentication="principal.username"> User</span></p>
+	<br>
+	<br>
+	<br>
+	
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -55,6 +71,7 @@
                         <div class="status" id="status"></div>
             
                     <div id="deck" class="deck">
+						<p>No of card on Deck</p>
                         <div id="deckcount">52</div>
                     </div>
             
