--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -8,6 +8,22 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
+
+
+<style>
+	.alert {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.alertPassword,.alertEmail {
+  color: darkblue;
+  background-color: lightblue;
+  border-color: black;
+}
+</style>
 </head>
 <body>
 
@@ -60,12 +76,24 @@
 							id="email" class="form-control" th:field="*{email}" required
 							autofocus="autofocus" />
 					</div>
+					<div class="alert alertEmail">
+    					Please enter a email address in the format (abc@pqr.xx)
+  					</div>
 
 					<div class="form-group">
 						<label class="control-label" for="password"> Password </label> <input
 							id="password" class="form-control" type="password"
 							th:field="*{password}" required autofocus="autofocus" />
 					</div>
+					<div class="alert alertPassword">
+						<div>Password should have:</div>
+    					<ul>
+   							 <li>Minimum of 8 characters</li>
+    						 <li>At least one uppercase letter</li>
+    						 <li>At least one lowercase letter</li>
+    						 <li>At least one digit (0-9)</li>
+  						</ul>
+  					</div>
 
 					<div class="form-group">
 						<button type="submit" class="btn btn-success">Register</button>
